fix: alignment and icon color for attachments

--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -648,6 +648,7 @@ body {
 			width: 94px;
 			display: block;
 			margin-left: var(--margin-xs);
+			text-align: left;
 		}
 	}
 }
